testsuite/poke.pkl/div-integers-diag-1.pk
/* { dg-do compile } */

defvar x = 100 / (10 - 10);  /* { dg-error "" } */
